<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <include
        android:id="@+id/header"
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="@dimen/margin_padding_small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textTitle"
                style="@style/text_views"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_normal"
                android:text="@string/username"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputUsername"
                style="@style/text_input_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_tiny"
                android:enabled="false"
                android:hint="@string/enter_username"
                android:text="Usr@123" />

            <TextView
                android:id="@+id/textOldPassword"
                style="@style/text_views"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_normal"
                android:text="@string/old_password" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputOldPassword"
                style="@style/text_input_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_tiny"
                android:hint="@string/enter_old_password"
                android:inputType="textPassword" />

            <FrameLayout
                android:id="@+id/passwordInstruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_normal"
                android:background="#FFFAF8F8"
                android:padding="@dimen/margin_padding_tiny">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/password_must_be"
                    android:textSize="@dimen/text_size_normal" />

            </FrameLayout>

            <TextView
                android:id="@+id/textNewPassword"
                style="@style/text_views"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_normal"
                android:text="@string/new_password" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputNewPassword"
                style="@style/text_input_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_tiny"
                android:hint="@string/enter_new_password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textConfirmPassword"
                style="@style/text_views"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_normal"
                android:text="@string/confirm_password" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputConfirmPassword"
                style="@style/text_input_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_tiny"
                android:hint="@string/enter_new_password"
                android:inputType="textPassword" />
        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_small"
        android:layout_gravity="right"
        style="@style/button"
        android:text="@string/change_password"/>
</LinearLayout>